assets/designer/themes/default/css/landing-page.css
body,
html {
    width: 100%;
    height: 100%;
}
body,
h1,
h2,
h3,
h4,
h5,
h6 {
    font-family: "Lato","Helvetica Neue",Helvetica,Arial,sans-serif;
    font-weight: 500;
}

.mail-option.travelplan {
    display: table-row-group !important;
}
.mail-option.timeline-post {
    margin-bottom: -4%;
    margin-left: 5px;
}
.topnav {
    font-size: 14px; 
}

.lead {
    font-size: 18px;
    font-weight: 400;
}

.intro-header {
    padding-top: 50px; /* If you're making other pages, make sure there is 50px of padding to make sure the navbar doesn't overlap content! */
    padding-bottom: 5px;
    text-align: center;
    color: #f8f8f8;  
}
.bg.topbanner {
    margin: 12px 0;
}
.dropdown.inquiry {
    height: inherit;
   /* margin-top: inherit;*/
}
.top-nav .nav > li > a > i.fa-flask {
    position: relative;
    top: 3px;
}
.notification-row  .notify-arrow-blue {
    border-bottom-color: white!important;
}
.top-nav .nav > li > a > i.icon_mail_alt {
    position: relative;
    top: 1px;
}
.leftbanner .col-sm-4.col-xs-4.col-md-4 {
    padding: 5px;
}

.intro-message {
    position: relative;
    padding-top: 20%;
    padding-bottom: 20%;
}

.intro-message > h1 {
    margin: 0;
    text-shadow: 2px 2px 3px rgba(0,0,0,0.6);
    font-size: 5em;
}

.intro-divider {
    width: 400px;
    border-top: 1px solid #f8f8f8;
    border-bottom: 1px solid rgba(0,0,0,0.2);
}

.intro-message > h3 {
    text-shadow: 2px 2px 3px rgba(0,0,0,0.6);
}


.navbar-brand { 
    padding: 7px 15px!important; 
}
.leftbanner {
    background: #fff;
    border: solid 1px #d4d4d4;
    clear: both;
    display: none;
    padding: 1px 0;
}
.leftbanner a img {
    border: 1px solid #ccc;
}
.adjest.pull-right.planstyle {
    margin-top: -30px;
}
.partnerResult {
    border: 1px solid #ddd;
    margin: 10px 0px;
    min-height: 96px;
    position: relative;	
}
.partnerResultpage {
    border: 1px solid #ddd;
    margin: 14px 0px;
    min-height: 500px;
    position: relative;	
}
.partnerResult .partnerPhoto {
    height: 75px;
    left: 10px;
    position: absolute;
    top: 10px;
    width: 75px;
    z-index:0;
    -ms-transform: rotate(7deg); /* IE 9 */
    -webkit-transform: rotate(7deg); /* Chrome, Safari, Opera */
    transform: rotate(360deg);
}

.partnerResult .partnerPhoto img {
    border: 1px solid #ccc;
    border-radius: 15px;
    width: 70px;
    position: inherit;
    -ms-transform: rotate(7deg); /* IE 9 */
    -webkit-transform: rotate(7deg); /* Chrome, Safari, Opera */
    transform: rotate(90deg);
}
.partnerResult .partnerDate {
    position: absolute;
    right: 10px;
    text-align: right;
    top: 10px;
	 font-size: 12px;
}


.dream {
    color: #159e3e;
}

.partnerResult .partnerInfo {
    margin-left: 95px;
}
.partnerResult .partnerName {
    font-weight: bold;
    margin-top: 10px;
}
.partnerResult .partnerName{
    color: #888888; 
    margin: 5px 130px 0 0;
	word-wrap: break-word;
}

.partnerResult .partnerNote {
    color: #555;
    line-height: 1.5em;
    margin: 5px 5px 5px 0;
    width: 440px;
}

.partnerResult .partnerInterests {
    color: #888888;
    font-size: 11px;
    margin: 5px 130px 0 0;
	word-wrap: break-word;
}

.partnerResult .partnerSupport {
    font-weight: bold;
    padding: 0 0 8px;
	margin:0 10px 0 0;
}
.tab-content {
    display: inline-block;
    width: 100%;
	border-top:none;
	border-bottom: 1px solid #ccc;
	border-right: 1px solid #ccc;
	border-left: 1px solid #ccc;
	padding: 8px 0;
}
a:hover, a:active, a:focus {
 outline: 0;
}
.homeFormArea>.nav>li>a {
    position: relative;
    display: block;
    padding: 10px 15px;
    font-size: 1.3em;
}
.navbar-default {
    background-color: #fe0034!important;
    border-color: #e7e7e7;
}
.marginBottom{ margin:0 0 10px 0;}
.dividericon {
    margin: 32px 0 0px;
    text-align: center;
}
.btn-primary {
    color: #fff;
	background-color: #fe0034!important;
    border-color: #fe0034!important;
}
.btn-primary.active, .btn-primary.focus, .btn-primary:active, .btn-primary:focus, .btn-primary:hover, .open>.dropdown-toggle.btn-primary {
    color: #fff;
    background-color: #fe0034!important;
    border-color: #fe0034!important;
}
.partnerName a {
    color: #fe0034!important;
    text-decoration: none;
}
.navbar-default .navbar-nav > li > a {
    color: #fff;
}
.navbar-default .navbar-nav > li > a:focus, .navbar-default .navbar-nav > li > a:hover {
    color: #fff;
}
.form-control { 
    font-size: 12px!important;
}

.homeFormArea .nav-tabs > li.active a {
   color: #337ab7!important;
    text-decoration: none;
}
.homeFormArea .nav-tabs > li a {
    color: #fe0034!important;
    text-decoration: none;
}
.clsimg {
    max-width: 32px;
	margin-top: 22px;
    border: 1px solid #ccc;      
    border-radius: 5px;      width: 70px;
}
textarea.message {
    height: 32px;
}
.cellSub {
    margin: 22px 0 10px;
}
.uploadAndText{
	position:relative;
	padding-top: 23px;
}
.uploadAndText .uploadSection {
    position: absolute;
    right: 8px;
    top: 30px;
    width: 15px;
}.preview {
    margin: 8px 0;
}
.sicons ul {
    overflow: auto;
	 margin-bottom: 0px;
	  margin-top: 10px;
}
 
.sicons ul li {
    list-style-type: none;
    float: left;
}
 
.sicons ul li a i {
    background: #205D7A;
    color: #fff;
    width: 30px;
    height: 30px;
    border-radius: 20px;
    font-size: 19px;
    text-align: center;
    margin-right: 10px;
    padding-top: 15%;
    transition: all 0.2s ease-in-out;
}
.sicons ul li a i.fa-facebook {
 background:#3b5998
} 
.sicons ul li a i.fa-linkedin {
 background:#007bb6
}
.sicons ul li a i.fa-twitter {
 background:#00aced
}
.sicons ul li a i.fa-google-plus {
 background:#dd4b39
}
.sicons ul li a i:hover {
    opacity: .7;
}
 .col-lg-12.productsSection {
    background-color: #f1f1f1;
    padding-top: 12px;
}
.product_clsimg {
    margin: 2px 12px 0 0;
    max-width: 112px;
	border:solid 1px #ccc;
}
/* ... */

